--- a/day1/openAI_prompt.ipynb
+++ b/day1/openAI_prompt.ipynb
@@ -258,6 +258,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To solve the problem \\( 32 - 11 \\) step-by-step, follow these steps:\n",
+      "\n",
+      "1. **Break down the numbers**: 32 and 11\n",
+      "2. **Subtract the tens place**: \n",
+      "   - For 32, the tens place is 30.\n",
+      "   - For 11, the tens place is 10.\n",
+      "   - Subtract the tens: \\( 30 - 10 = 20 \\)\n",
+      "3. **Subtract the ones place**: \n",
+      "   - For 32, the ones place is 2.\n",
+      "   - For 11, the ones place is 1.\n",
+      "   - Subtract the ones: \\( 2 - 1 = 1 \\)\n",
+      "4. **Combine the results**: \n",
+      "   - Add the results from the tens place and the ones place: \\( 20 + 1 = 21 \\)\n",
+      "\n",
+      "Answer: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "completion = client.chat.completions.create(\n",
+    "  model=\"gpt-4o-mini\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"user\", \"content\": \"\"\"\n",
+    "Solve the following problem step-by-step: 32-11\n",
+    "\n",
+    "     \n",
+    "here is example\n",
+    "Solve the following problem step-by-step: 123 - 58\n",
+    "\n",
+    "Step-by-step solution:\n",
+    "1. Break down the numbers: 123 and 58\n",
+    "2. Subtract the tens place: 120 - 50 = 70\n",
+    "3. Subtract the ones place: 3 - 8 = -5 (borrow 10 from the tens place)\n",
+    "4. Adjust for borrowing: 70 - 10 + (-5) = 55\n",
+    "\n",
+    "Answer: 65\n",
+    "     \"\"\"},\n",
+    "  ]\n",
+    ")\n",
+    "\n",
+    "completion.choices[0].message.content\n",
+    "\n",
+    "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sure, let's solve the problem 32 - 11 step-by-step:\n",
+      "\n",
+      "### Step-by-step solution:\n",
+      "\n",
+      "1. **Break down the numbers:**  \n",
+      "   \\( 32 \\) and \\( 11 \\)\n",
+      "\n",
+      "2. **Subtract the tens place:**  \n",
+      "   \\( 30 - 10 = 20 \\)\n",
+      "\n",
+      "3. **Subtract the ones place:**  \n",
+      "   \\( 2 - 1 = 1 \\)\n",
+      "\n",
+      "4. **Combine the results from steps 2 and 3:**  \n",
+      "   \\( 20 + 1 = 21 \\)\n",
+      "\n",
+      "### Answer: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "completion = client.chat.completions.create(\n",
+    "  model=\"gpt-4o\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"user\", \"content\": \"\"\"\n",
+    "Solve the following problem step-by-step: 32-11\n",
+    "\n",
+    "     \n",
+    "here is example\n",
+    "Solve the following problem step-by-step: 123 - 58\n",
+    "\n",
+    "Step-by-step solution:\n",
+    "1. Break down the numbers: 123 and 58\n",
+    "2. Subtract the tens place: 120 - 50 = 70\n",
+    "3. Subtract the ones place: 3 - 8 = -5 (borrow 10 from the tens place)\n",
+    "4. Adjust for borrowing: 70 - 10 + (-5) = 55\n",
+    "\n",
+    "Answer: 65\n",
+    "     \"\"\"},\n",
+    "  ]\n",
+    ")\n",
+    "\n",
+    "completion.choices[0].message.content\n",
+    "\n",
+    "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
