--- a/day1/openAI_prompt.ipynb
+++ b/day1/openAI_prompt.ipynb
@@ -312,30 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure, let's solve the problem 32 - 11 step-by-step:\n",
+      "Sure, let's solve the problem 32 - 11 step-by-step following a similar format:\n",
       "\n",
-      "### Step-by-step solution:\n",
+      "Step-by-step solution:\n",
+      "1. Break down the numbers: 32 and 11\n",
+      "2. Subtract the tens place: 30 - 10 = 20\n",
+      "3. Subtract the ones place: 2 - 1 = 1 \n",
+      "4. Combine the results from the tens and ones place: 20 + 1 = 21\n",
       "\n",
-      "1. **Break down the numbers:**  \n",
-      "   \\( 32 \\) and \\( 11 \\)\n",
-      "\n",
-      "2. **Subtract the tens place:**  \n",
-      "   \\( 30 - 10 = 20 \\)\n",
-      "\n",
-      "3. **Subtract the ones place:**  \n",
-      "   \\( 2 - 1 = 1 \\)\n",
-      "\n",
-      "4. **Combine the results from steps 2 and 3:**  \n",
-      "   \\( 20 + 1 = 21 \\)\n",
-      "\n",
-      "### Answer: 21\n"
+      "Answer: 21\n"
      ]
     }
    ],
